# deep_learning

./: .gitignore  README.md
dataset_cfg/: datasetA.yaml  datasetB.yaml  datasetC.yaml  datasetD.yaml  datasetE.yaml  datasetF.yaml  datasetG.yaml  datasetI.yaml  datasetJ.yaml
scripts/: .gitignore  README.md  browse_dataset.py  browse_yolo_dataset.py  client_secret.json  datasetA.yaml  download.py  drive_interface.py  evaluate_detections.py  get_videos_list.py  json_to_kitti.py  json_to_yolo.py  make_images.sh  make_json_dataset.py  make_local_dataset.py  make_yolo_dataset.py
scripts/dataset_utils/: README.md  json_to_yolo.py  make_json_dataset.py  make_local_dataset.py  make_yolo_dataset.py
scripts/evaluation/: README.md  evaluate_detections.py
scripts/util/: box.py  drive_interface.py
tfProjects/yolo_cpp/: CMakeLists.txt  main.cpp  utils.cpp  utils.h
tfProjects/yolo_py/: evaluate.py  load_graph.py  load_model.py  save_engine.py  save_graph.py  save_model.py
tfProjects/yolo_py/models/: modelUtils.py  yoloV3.py  yoloV3Tiny.py
tfProjects/yolo_py/names/: dice.names
tfProjects/yolo_py/utils/: yoloUtils.py
